// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Event building for EVM buildStandardizedEventFromEvmEvent Should build a standardized event object for a OperationExecuted event 1 1`] = `
{
  "_id": "operationexecuted_0xd9feb6e60cd73c396cbaeb3e5fa55c774c03a274c54f5bc53a62a59855ec7cc4",
  "assetAmount": "200000",
  "assetTokenAddress": null,
  "blockHash": "0x0fc3588f727dde10ccd937b04f5666fb04e39553b4c73719555acd7a6a430764",
  "destinationAccount": "0xdDb5f4535123DAa5aE343c24006F4075aBAF5F7B",
  "destinationNetworkId": "0xf9b459a1",
  "eventArgs": [
    [
      "0x05cf0e83408207704ee0ea2a4a6ea87905fc0d2038dbb610a0ca64f2cf47b134",
      "0xb1bb8b6502edc17fdd0cc83505289a6d429a6381ffe5dbf4fe31a88dd236d643",
      "0x0000000000000000000000000000000000000000000000000000000000000000",
      "98322",
      "18",
      "200000",
      "0",
      "1000",
      "2000",
      "0xdaacB0Ab6Fb34d24E8a67BfA14BF4D95D4C7aF92",
      "0x5aca268b",
      "0xf9b459a1",
      "0xb9286154",
      "0x5aca268b",
      "0xddb5f4535123daa5ae343c24006f4075abaf5f7b",
      "0xdDb5f4535123DAa5aE343c24006F4075aBAF5F7B",
      "pNetwork Token",
      "PNT",
      "0x",
      false,
    ],
  ],
  "eventName": "OperationExecuted",
  "finalTransactionHash": null,
  "finalTransactionTimestamp": null,
  "forwardDestinationNetworkId": "0xb9286154",
  "forwardNetworkFeeAssetAmount": "2000",
  "isForProtocol": false,
  "networkFeeAssetAmount": "1000",
  "networkId": "0xe15503e4",
  "nonce": "98322",
  "optionsMask": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "originatingAddress": "0xddb5f4535123daa5ae343c24006f4075abaf5f7b",
  "originatingBlockHash": "0x05cf0e83408207704ee0ea2a4a6ea87905fc0d2038dbb610a0ca64f2cf47b134",
  "originatingNetworkId": "0x5aca268b",
  "originatingTransactionHash": "0xb1bb8b6502edc17fdd0cc83505289a6d429a6381ffe5dbf4fe31a88dd236d643",
  "proposedTransactionHash": null,
  "proposedTransactionTimestamp": null,
  "status": "detected",
  "transactionHash": "0xa5c5838123aa37d2efd69285f7b6bd8c2e93d4cf243d45926169502c13b23a49",
  "underlyingAssetDecimals": 18,
  "underlyingAssetName": "pNetwork Token",
  "underlyingAssetNetworkId": "0x5aca268b",
  "underlyingAssetSymbol": "PNT",
  "underlyingAssetTokenAddress": "0xdaacB0Ab6Fb34d24E8a67BfA14BF4D95D4C7aF92",
  "userData": "0x",
  "userDataProtocolFeeAssetAmount": "0",
  "witnessedTimestamp": "2023-03-14T16:00:00.000Z",
}
`;

exports[`Event building for EVM buildStandardizedEventFromEvmEvent Should build a standardized event object for a OperationQueued event 1 1`] = `
{
  "_id": "operationqueued_0xd9feb6e60cd73c396cbaeb3e5fa55c774c03a274c54f5bc53a62a59855ec7cc4",
  "assetAmount": "200000",
  "assetTokenAddress": null,
  "blockHash": "0xfa7f1989507da8e2bd7be30ab9064c9819d34f2b43f77d8eba3c15f427486a46",
  "destinationAccount": "0xdDb5f4535123DAa5aE343c24006F4075aBAF5F7B",
  "destinationNetworkId": "0xf9b459a1",
  "eventArgs": [
    [
      "0x05cf0e83408207704ee0ea2a4a6ea87905fc0d2038dbb610a0ca64f2cf47b134",
      "0xb1bb8b6502edc17fdd0cc83505289a6d429a6381ffe5dbf4fe31a88dd236d643",
      "0x0000000000000000000000000000000000000000000000000000000000000000",
      "98322",
      "18",
      "200000",
      "0",
      "1000",
      "2000",
      "0xdaacB0Ab6Fb34d24E8a67BfA14BF4D95D4C7aF92",
      "0x5aca268b",
      "0xf9b459a1",
      "0xb9286154",
      "0x5aca268b",
      "0xddb5f4535123daa5ae343c24006f4075abaf5f7b",
      "0xdDb5f4535123DAa5aE343c24006F4075aBAF5F7B",
      "pNetwork Token",
      "PNT",
      "0x",
      false,
    ],
  ],
  "eventName": "OperationQueued",
  "finalTransactionHash": null,
  "finalTransactionTimestamp": null,
  "forwardDestinationNetworkId": "0xb9286154",
  "forwardNetworkFeeAssetAmount": "2000",
  "isForProtocol": false,
  "networkFeeAssetAmount": "1000",
  "networkId": "0xe15503e4",
  "nonce": "98322",
  "optionsMask": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "originatingAddress": "0xddb5f4535123daa5ae343c24006f4075abaf5f7b",
  "originatingBlockHash": "0x05cf0e83408207704ee0ea2a4a6ea87905fc0d2038dbb610a0ca64f2cf47b134",
  "originatingNetworkId": "0x5aca268b",
  "originatingTransactionHash": "0xb1bb8b6502edc17fdd0cc83505289a6d429a6381ffe5dbf4fe31a88dd236d643",
  "proposedTransactionHash": null,
  "proposedTransactionTimestamp": null,
  "status": "proposed",
  "transactionHash": "0x9a6123eaa2acd909f2314e3fd0e799ce316ef301e5625aa5f89d1a70ba80e96b",
  "underlyingAssetDecimals": 18,
  "underlyingAssetName": "pNetwork Token",
  "underlyingAssetNetworkId": "0x5aca268b",
  "underlyingAssetSymbol": "PNT",
  "underlyingAssetTokenAddress": "0xdaacB0Ab6Fb34d24E8a67BfA14BF4D95D4C7aF92",
  "userData": "0x",
  "userDataProtocolFeeAssetAmount": "0",
  "witnessedTimestamp": "2023-03-14T16:00:00.000Z",
}
`;

exports[`Event building for EVM buildStandardizedEventFromEvmEvent Should build a standardized event object for a UserOperation event 1 1`] = `
{
  "_id": "useroperation_0x9f762006a18c631eb889ca5acbf07660f505bc97e8dd3439b3fda4251135fd5e",
  "assetAmount": "100000000000",
  "assetTokenAddress": "0x49b3609415759949f207F1e6733b5612cB7820ba",
  "blockHash": "0xce823a64f61258f8186c6c8de9a6e934f47799fc533d529a6f783759d82b111f",
  "destinationAccount": "0xa41657bf225F8Ec7E2010C89c3F084172948264D",
  "destinationNetworkId": "0xf9b459a1",
  "eventArgs": [
    "68149",
    "0xa41657bf225f8ec7e2010c89c3f084172948264d",
    "0xa41657bf225F8Ec7E2010C89c3F084172948264D",
    "0xf9b459a1",
    "pTokens PNT",
    "PNT",
    "18",
    "0xB6bcae6468760bc0CDFb9C8ef4Ee75C9dd23e1Ed",
    "0xf9b459a1",
    "0x49b3609415759949f207F1e6733b5612cB7820ba",
    "100000000000",
    "0",
    "100",
    "100",
    "0xf9b459a1",
    "0x",
    "0x0000000000000000000000000000000000000000000000000000000000000001",
    false,
  ],
  "eventName": "UserOperation",
  "finalTransactionHash": null,
  "finalTransactionTimestamp": null,
  "forwardDestinationNetworkId": "0xf9b459a1",
  "forwardNetworkFeeAssetAmount": "100",
  "isForProtocol": false,
  "networkFeeAssetAmount": "100",
  "networkId": "0x5aca268b",
  "nonce": "68149",
  "optionsMask": "0x0000000000000000000000000000000000000000000000000000000000000001",
  "originatingAddress": "0xa41657bf225f8ec7e2010c89c3f084172948264d",
  "originatingBlockHash": null,
  "originatingNetworkId": null,
  "originatingTransactionHash": null,
  "proposedTransactionHash": null,
  "proposedTransactionTimestamp": null,
  "status": "detected",
  "transactionHash": "0x2ab67dfd14a5268d6752d167232d67471e96ccd3e365cb4ae376391a50bec50f",
  "underlyingAssetDecimals": 18,
  "underlyingAssetName": "pTokens PNT",
  "underlyingAssetNetworkId": "0xf9b459a1",
  "underlyingAssetSymbol": "PNT",
  "underlyingAssetTokenAddress": "0xB6bcae6468760bc0CDFb9C8ef4Ee75C9dd23e1Ed",
  "userData": "0x",
  "userDataProtocolFeeAssetAmount": "0",
  "witnessedTimestamp": "2023-03-14T16:00:00.000Z",
}
`;
